# Daly-BMS

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  cog.toml  mqtt.yaml
.github/workflows/: check.yml  release-plz.yml
src/: bms.rs  commandline.rs  daemon.rs  error.rs  lib.rs  main.rs  mqtt.rs  protocol.rs  serialport.rs  tokio_serial.rs  tokio_serial_async.rs
