[package]
name = "dalybms"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/acpiccolo/Daly-BMS"
description = "Daly BMS protocol and commandline tool"

[lib]
name = "dalybms_lib"
path = "src/lib.rs"

[[bin]]
name = "dalybms"
path = "src/main.rs"
required-features = ["bin-dependencies"]

[features]
default = ["bin-dependencies"]
serialport = ["dep:serialport"]
tokio-serial-async = ["dep:tokio-serial", "tokio/time", "tokio/io-util"]
serde = ["dep:serde"]

bin-dependencies = [
    "dep:anyhow",
    "serialport",
    "serde",
    "clap/derive",
    "dep:clap-verbosity-flag",
    "dep:clap-num",
    "dep:humantime",
    "dep:flexi_logger",
    "dep:chrono",
    "dep:rumqttc",
    "dep:serde_yaml",
    "dep:rand",
    "dep:serde_json",
]

[dependencies]
thiserror = "2"
log = { version = "0.4" }
serde = { version = "1", features = ["derive"], optional = true }
serde_yaml = { version = "0.9", optional = true }
rumqttc = { version = "0.24", optional = true }
serialport = { version = "4", optional = true }
tokio-serial = { version = "5", optional = true }
tokio = { version = "1", default-features = false, optional = true }
# Requirements for bin
anyhow = { version = "1", optional = true }
clap = { version = "4", optional = true }
clap-verbosity-flag = { version = "3", optional = true }
clap-num = { version = "1", optional = true }
humantime = { version = "2", optional = true }
flexi_logger = { version = "0.31", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rand = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }

[package.metadata.cargo-machete]
ignored = ["clap-num"]

[dev-dependencies]
tempfile = "3"
